# contextprune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  PAPER_NOTES.md  README.md  example.py  pyproject.toml
benchmarks/: compare_baselines.py  compression_safety_manual.py  compression_safety_verify.py  context_injector.py  create_agentic_dataset.py  exp0_compression_safety.py  exp1_compression.py  exp2_semantic.py  exp3_accuracy.py  exp3_tool_recall.py  exp4_agentic.py  exp4_latency.py  exp5_api_accuracy.py  model_adapter_smoke_test.py  precompute_llmlingua2.py  run_all.py  scenarios.py
benchmarks/data/: download_datasets.py  download_stats.json
benchmarks/results/: .cost_mmlu_pro_20260225_010139.json  .cost_mmlu_pro_20260225_073344.json  .cost_mmlu_pro_20260225_080722.json  .cost_mmlu_pro_20260225_081517.json  exp1.json  exp2.json  exp3.json  exp3_mmlu_pro_20260225_080722.jsonl  exp3_mmlu_pro_20260225_081517.jsonl  exp3_summary_20260225_234821.csv  exp4.json  exp4_agentic_20260226_000431.jsonl  exp4_agentic_20260226_000512.jsonl  exp4_agentic_20260226_000955.jsonl  exp4_agentic_20260226_001910.jsonl  exp5.json  report.md
contextprune/: __init__.py  budget.py  cli.py  core.py  dedup.py  embeddings.py  proxy.py  stats.py  tokenizer.py  tool_filter.py
docs/: oauth-subscriptions.md
examples/: agent_example.py  basic_usage.py
integrations/: README.md  oauth-subscriptions.md
skills/: README.md
tests/: sample_conversation.json  test_adapters.py  test_baselines.py  test_budget.py  test_data_pipeline.py  test_dedup.py  test_integration.py  test_mmr.py  test_protect_system.py  test_proxy_streaming.py  test_tool_filter.py
(+41 files in other folders)
