[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextprune"
version = "0.1.1"
description = "Cut your LLM API costs by 40-80% with 2 lines of code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "contextprune contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
baselines = ["llmlingua>=0.2.0"]
research = [
    "datasets>=2.0.0",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.0.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "llmlingua>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pandas>=1.5.0",
]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
markers = [
    "integration: tests that require a real embedding model (downloads ~137MB on first run)",
]

[project.scripts]
contextprune = "contextprune.cli:main"

[tool.setuptools.packages.find]
include = ["contextprune*"]
